--- a/style.css
+++ b/style.css
@@ -15,13 +15,13 @@ strong{
     color:black
 }
 
-#one{
+.one{
     font-size: 20px;
     border-color: burlywood;
 
 }
 
-#two{
+.two{
     font-size: 20px;
     border-color: aliceblue;
 }
