--- a/style.css
+++ b/style.css
@@ -19,10 +19,12 @@ strong{
 .one{
     font-size: 20px;
     border-color: burlywood;
+    background-color: darkcyan;
 
 }
 
 .two{
     font-size: 20px;
     border-color: aliceblue;
+    background-color: darkkhaki;
 }
